@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gtkmozembed
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkmozembed/ChangeLog,v 1.11 2008/04/02 07:55:23 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkmozembed/ChangeLog,v 1.12 2008/04/22 18:15:40 graaff Exp $
+
+  22 Apr 2008; Hans de Graaff <graaff@gentoo.org>
+  -ruby-gtkmozembed-0.15.0.ebuild:
+  Remove old version
 
   02 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
   ruby-gtkmozembed-0.16.0.ebuild:
